style(hero__xxs): fix white space
This commit is to resolve the rendering issue in the main hero block.

The change will ensure that there will enough space between the said
block and the header block thereby rendering well on xxs devices and
window or screen sizes.

--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ vertical-align: top;
   flex-direction: column-reverse; 
   align-items:center;
   margin-top: 13rem;  
-  padding:0 4% 2rem;
+  padding:20% 4% 2rem;
 }
 
 .hero__info-block {
